fix icon align on multi-line titles (#5406)

--- a/app/assets/stylesheets/partials/_bento.scss
+++ b/app/assets/stylesheets/partials/_bento.scss
@@ -257,7 +257,7 @@
 		}
 	}
 	h3.libguide-item-title {
-		background: transparent url("noun_research_guide.svg") no-repeat center left;
+		background: transparent url("noun_research_guide.svg") no-repeat left top;
 		padding-left: 1.9rem;
 	}
 	p {
